<resources>
    <string name="app_name">Task Scheduler</string>
    <string name="enter_name">Country Name</string>
    <string name="add_task">Add Task</string>
    <string name="search_by_date">Search by Date</string>
    <string name="task_done">Done</string>
    <string name="in_progress">In progress</string>
    <string name="btn_update">Update</string>
    <string name="btn_delete">Delete</string>
    <string name="empty_list_text">No tasks to Do</string>
    <string name="date">Choose date</string>
    <string name="enter_task">Enter a task</string>
    <string name="search_by_check">search by check</string>
    <string name="normal">No pressure</string>
    <string name="urgent">Urgent</string>
    <string name="very_urgent">Very Urgent</string>
    <string name="search">Search</string>
</resources>
