<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background_task"
    android:padding="20dp" >

    <EditText
        android:id="@+id/add_your_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/enter_task" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/date_to_perform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date" >
    </EditText>

    <EditText
        android:id="@+id/check_task_done"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible">
    </EditText>

    <EditText
        android:id="@+id/check_urgent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible">
    </EditText>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/progressRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton android:id="@+id/in_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/in_progress"
            android:checked="true"/>

        <RadioButton android:id="@+id/tasks_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_done"/>
    </RadioGroup>

    <RadioGroup
        android:id="@+id/urgencyRadio"
        android:layout_width="match_parent"
        android:layout_height="61dp"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"
            android:checked="true"/>

        <RadioButton
            android:id="@+id/urgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgent" />

    </RadioGroup>

    <Button
        android:id="@+id/add_task"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:backgroundTint="@color/pinkAndWhite"
        android:text="@string/add_task" />

</LinearLayout>