<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/lightGreen"
    android:padding="20dp" >

    <EditText
        android:id="@+id/add_your_task"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/enter_task" />

    <EditText
        android:id="@+id/date_to_perform"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:ems="10"
        android:hint="@string/date" >
    </EditText>

    <EditText
        android:id="@+id/check_task_done"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible">
    </EditText>

    <EditText
        android:id="@+id/check_urgent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="invisible">
    </EditText>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/doneRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton android:id="@+id/task_to_perform"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_to_perform"/>

        <RadioButton android:id="@+id/tasks_done"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/task_done"/>
    </RadioGroup>

    <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/urgencyRadio"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RadioButton android:id="@+id/normal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/normal"/>

        <RadioButton android:id="@+id/urgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/urgent"/>

        <RadioButton android:id="@+id/very_urgent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/very_urgent"/>
    </RadioGroup>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_update"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/btn_update" />

        <Button
            android:id="@+id/btn_delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:text="@string/btn_delete" />
    </LinearLayout>

</LinearLayout>