<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/backgorund"
    android:padding="20dp">

    <ListView
        android:id="@+id/listViewDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="1dp"
        android:padding="10dp" />

    <EditText
        android:id="@+id/date_to_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_gravity="center"
        android:gravity="center"
        android:hint="@string/date" >
    </EditText>

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:padding="20dp"
        android:textSize="16dp"
        android:text="@string/empty_list_text" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:layout_gravity="center"
        android:backgroundTint="@color/pink"
        android:hint="@string/search" >
    </Button>

</LinearLayout>